--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "mixpanel",
+  "name": "mixpanel-ns-fork",
   "description": "A simple API for mixpanel",
   "keywords": ["mixpanel", "analytics", "api", "stats"],
-  "version": "0.0.20",
+  "version": "0.0.21",
   "homepage": "https://github.com/carlsverre/mixpanel-node",
   "author": "Carl Sverre",
   "main": "lib/mixpanel-node",
